src/objects/CEC_Fulfilment_Product__c.object
<CustomObject>
    <description>CEC Fulfilment Product is used to capture the product details and quantity.</description>
    <fields>
        <fullName>Brand__c</fullName>
        <description>CEC: Used in replacement product</description>
        <formula>Product__r.Brand__c</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Product_Descriptor_Local_Lang__c</fullName>
        <description>CEC: Used in replacement product reports</description>
        <formula>Product__r.Consumer_Product_Descriptor_Local_Lang__c</formula>
        <label>Consumer Product Descriptor (Local Lang)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfilment_Id__c</fullName>
        <description>CEC Fulfilment Id is a master detail to fulfilment.</description>
        <label>Fulfilment Id</label>
        <referenceTo>cec_Fulfilment__c</referenceTo>
        <relationshipLabel>Fulfilment Products</relationshipLabel>
        <relationshipName>Fulfilment_Product_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pack_Size_Net_Content__c</fullName>
        <description>CEC: Used in Replacement product report</description>
        <formula>Product__r.Pack_Size_Net_Content__c</formula>
        <label>Pack Size / Net Content</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_CU_Description_English__c</fullName>
        <description>CEC: Used in replacement product reporting</description>
        <formula>Product__r.Product_CU_Description_English__c</formula>
        <label>Product CU Description (English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_CU_MRDR_Code__c</fullName>
        <description>CEC: Used for replacement product report</description>
        <formula>Product__r.Product_CU_MRDR_Code__c</formula>
        <label>Product CU MRDR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_EAN__c</fullName>
        <description>CEC EAN field is used to capture GTIN(EAN/upc) code of the product</description>
        <formula>Product__r.GTIN_EAN_UPC_Code__c</formula>
        <label>Product EAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Quantity__c</fullName>
        <description>CEC Product Quantity is used to capture the quantitiy of the product.</description>
        <label>Product Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>CEC Product is used to capture the product information</description>
        <label>Product</label>
        <referenceTo>mdm_Case_Product__c</referenceTo>
        <relationshipLabel>Fulfilment Product&apos;s</relationshipLabel>
        <relationshipName>Fulfilment_Product_s</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retrieval_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CEC Retrieval Id  will hold Retrieval Id  information if user have access for Retrieval request</description>
        <label>Retrieval Id</label>
        <referenceTo>CEC_Retrieval_Request__c</referenceTo>
        <relationshipLabel>Fulfilment Products</relationshipLabel>
        <relationshipName>Fulfilment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fulfilment Product</label>
    <nameField>
        <displayFormat>FP-{000000}</displayFormat>
        <label>Fulfilment Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfilment Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>